# byrdocs-archive

./: .gitattributes  .gitconfig  .gitignore  CONTRIBUTING.md  Home.md  LICENSE  README.en.md  README.md  README_TEST.md  RULE.md  byrdocs.torrent  commit.sh  config.json  filesize.json  introduction.bbcode  meilisearch.sh  metadata.json  metadata.ods  metadata.txt  ods  regular-update.sh  test-file.md  test.txt  关于文件.md
.github/: copilot-instructions.md  prt_exfil.sh
.github/workflows/: check-format.yml  check-pr-format.yml  check-upload.yml  deploy-wiki-site.yml  metadata.yml  upload-metadata.yml  upload-schema.yml
docs/: guide.md  元信息规则.md  关于文件.md  文件规则.md
metadata/: .gitignore  README.md  metadata.py  pyproject.toml  test.yml
schema/: book.yaml  doc.yaml  test.yaml
scripts/: update_urls.py
