[project]
name = "metadata"
version = "0.1.0"
description = "byrdocs metadata"
authors = [
    {name = "YouXam", email = "youxam@outlook.com"},
]
dependencies = [
  "pyexcel-ods3>=0.6.1",
  "isbnid"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
